welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: reassignment to val
while (Boolean = false){
               ^BDRBuggle:31: error: reassignment to val
Boolean = true
        ^